[package]
name = "zza"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
futures = "0.3.24"
crossbeam = "0.8.2"
tracing = "0.1.37"
tracing-subscriber = "0.3.16"
lazy_static = "1.4.0"

[[bin]]
name = "zza"
path = "src/main.rs"

[[bin]]
name = "test"
path = "src/test.rs"
