[package]
name = "zza"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
futures = "0.3.24"
crossbeam = "0.8.2"
tracing = "0.1.37"
tracing-subscriber = { version = "0.3.16", default-features = false, features = ["env-filter", "fmt"] }
once_cell = "1.16.0"
ctrlc = { version = "3.2.4", features = ["termination"] }
flurry = "0.4.0"

[dev-dependencies]
env_logger = "0.9.3"
test-log = { version = "0.2.11", features = ["trace"] }

[[bin]]
name = "zza"
path = "src/main.rs"

[[bin]]
name = "test"
path = "src/test.rs"
